--- a/style.css
+++ b/style.css
@@ -9,118 +9,191 @@
 }
 
 body {
- 
-
     font-family: 'Roboto', sans-serif;
-
     display: flex;
     flex-direction: column;
+    height: 100vh;
+}
+
+.full-width {
+    width: 100%;
+  
+}
+
+.signup1 {
+    border-color: #1F2937;
+}
+
+.grow {
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.blue {
+    background-color: #1F2937;
+}
+
+.white {
+    background-color: #fff;
+}
+
+.grey {
+    background-color: #cfd5e1;
+}
+
+.section1, 
+.randominfosection, 
+.quote,
+.bluecontainer, 
+.footer {
+    max-width: 900px;
+    margin: auto;
+    padding: 15px;
 }
 
 
 .header{
-    background-color: #1F2937;
-    color: #f9faf8;
-    padding-bottom: 40px;
     display: flex;
     justify-content: space-between;
-
+    align-items: center;
     font-size: 24px;
-    color: #F9FAF8;
+    font-weight: bold; 
+    color: #F9FAF8; 
+    padding-bottom: 25px;
 }
 
-.links{
+.links {
     list-style: none;
-
-    font-size: 18px;
-    color: #E5E7EB;
-
+    font-weight: lighter;
     display: flex;
-
+    gap: 20px;
 }
 
 .hero {
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
+    gap: 25px;
 
 }
 
 .heroheading {
     font-size: 48px;
     color: #F9FAF8;
-    font-weight: 900;
+    font-weight: 700;
+    margin-bottom: 10px;
 }
 
 .herosecondary, 
-.links {
-    font-size: 15px;
-    color: #E5E7EB;
+a {
+    font-size: 11px;
+    color: #bfc1c5;
+    margin-bottom: 15px;
+    text-decoration: none;
 }
 
-.hero,
-.footer {
-    background-color: #1F2937;
+
+.herorightside img {
+    width: 300px;
+    border-radius: 10px;
+    height: 200px;
 }
 
 h2 {
     text-align: center;
+    font-size: 34px;
+    color: #1F2937;
+    font-weight: 900; 
+    padding: 20px;
 }
 
-.heroleftside {
-    width: 250px;
-}
+
 
 .itemscontainer {
     display: flex;
-    gap: 15px;
+    flex-wrap: wrap;
+    gap: 18px;
     text-align: center;
     justify-content: center;
     margin: 0 50px;
+    font-size: 12px;
+    color: #6d7076;
+    margin-bottom: 30px;
 }
 
 .item {
     width: 200px;
 }
 
-img {
+.item img {
     width: 200px;
-    border: 2px blue;
+    border-radius: 10px;
 
-}
- 
-.lastcontainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: grey;
-    padding: 100px
 }
 
 .quote {
-    display: flex;
-    flex-direction: column;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    color: #1F2937;
+    text-align: left;
+    padding: 30px;
 }
+
 .quotename {
-    align-self: flex-end;
+    text-align: right;
     padding-right: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    padding-top: 5px;
+}
+
+.signup {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.signup{
+    padding: 30px 70px;
+    width: 700px;
+}
+
+button, 
+.signup {
+    background-color: #3882f6;
+    border-radius: 10px;
 }
 
 .signupcontainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    color: #E5E7EB;
+    font-size: 18px;
+    font-weight: 600;
+
 }
 
-.bluecontainer {
-    margin-top: 20px;
-    background-color: blue;
+.signupsubtext {
+    color: #E5E7EB;
+    font-size: 12px;
+    font-weight: 200;
 
-    display: flex;
-    justify-content: space-between;
 }
+
+
+button {
+    padding: 4px 15px;
+    text-align: center;
+    color: #E5E7EB;
+    font-size: 12px;
+    font-weight: 200;
+    border-color: white;
+}
+
 
 .footer {
     text-align: center;
-    
+    color: #E5E7EB;
 }
